Fix: Overflows

--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -13,7 +13,7 @@
   .particles {
   }
 
-  .hackrcdu {
+  .tictech {
     position: absolute;
     z-index: 2;
     font-size: 1.2rem;
@@ -21,20 +21,24 @@
     left: 5%;
     top: 40%;
   }
+  .tictech img{
+    width: 100%;
+    margin-left: -20px;
+  }
 
-  .hackrcdu h1 {
+  .tictech h1 {
     font-family: Poppins;
     margin-bottom: 10px;
     color: white;
   }
 
-  .hackrcdu h3 {
+  .tictech h3 {
     font-family: Poppins;
     padding-bottom: 5px;
     color: white;
   }
 
-  .hackrcdu h5 {
+  .tictech h5 {
     font-size: 18px;
     font-family: Poppins;
     color: white;
@@ -136,7 +140,7 @@
   }
 
   .about-section {
-    height: 115vh;
+    /* height: 115vh; */
     margin-top: 0;
     background: white;
     display: flex;
@@ -147,14 +151,14 @@
   }
 
   .highlights {
-    /* margin-top: 50px; */
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
   .highlights h1 {
-    padding: 25px;
+    /* padding: 25px; */
     font-size: 22px;
     font-family: Poppins;
   }
@@ -187,7 +191,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-top: 20px;
+    /* margin-top: 20px; */
   }
 
   .prize-card {
@@ -242,7 +246,7 @@
 
   .schedule-section {
     /* height: 110vh; */
-    margin-bottom: 300px;
+    margin-bottom: 00px;
     font-size: 1rem;
   }
 
@@ -283,7 +287,10 @@
   }
 
   .event-schedule {
+    display: flex;
+    align-items: center;
     margin-top: 20px;
+    flex-direction: column;
   }
 
   .event-schedule h1 {
@@ -292,6 +299,7 @@
 
   .schedule-section-section {
     /* position: absolute; */
+    position: relative;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -331,7 +339,7 @@
   }
 
   .events-section {
-    position: relative;
+    /* position: relative; */
     display: flex;
     width: 95%;
     margin-top: 10px;
@@ -436,7 +444,7 @@
   .events-section-section {
     display: flex;
     justify-content: center;
-    position: absolute;
+    /* position: absolute; */
     height: 90vh;
     width: 100%;
     bottom: 0;
@@ -444,7 +452,7 @@
   }
 
   .sponsors-section {
-    margin-top: 1000px;
+    margin-top: 100px;
     height: 100vh;
   }
 
