--- a/css/style.css
+++ b/css/style.css
@@ -8,21 +8,15 @@ body {
   scroll-behavior: smooth;
 }
 
-.section {
-  height: 100vh;
-}
+/* .section {
+  min-height: 100vh;
+} */
 
 .hero-section {
   position: relative;
-  background: #a8c0ff;
+  /* background: #a8c0ff;
   background: -webkit-linear-gradient(to bottom right, #fa709a, #fee140);
-  background: linear-gradient(to bottom right, #fa709a, #fee140);
-
-  background-image: linear-gradient(
-    to right,
-    #fa709a 0%,
-    #fee140 100%
-  ) !important;
+  background: linear-gradient(to bottom right, #fa709a, #fee140); */
 }
 
 .tictech {
@@ -32,6 +26,11 @@ body {
   padding: 25px;
   left: 10%;
   top: 25%;
+}
+
+.tictech img{
+  width: 50%;
+  margin-left: -50px;
 }
 
 .tictech h1 {
@@ -55,7 +54,7 @@ body {
 
 .illustration {
   position: relative;
-  z-index: 0;
+  z-index: 2;
 }
 
 .hero-img {
@@ -110,40 +109,13 @@ body {
   font-size: 38px;
 }
 
-.about-section {
-  background: white;
+.timer{
+  /* background: url("../assets/BlackTicTech.jpeg") fixed center center; */
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 1.5rem;
-}
-
-.themes-section {
-  background: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 1.5rem;
-  height: 140vh;
-}
-
-.highlights {
-  margin-top: 50px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.highlights h1 {
-  padding: 25px;
-  font-family: Poppins;
-}
-
-.container {
-  margin: 0 auto;
-  text-align: center;
-  display: flex;
-  justify-content: center;
+  /* color: white; */
 }
 
 .countdown {
@@ -151,7 +123,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 65%;
-  margin-bottom: 30px;
+  margin-bottom: 5rem;
 }
 
 .countdown li {
@@ -167,6 +139,50 @@ body {
   display: block;
   font-size: 40px;
 }
+
+.about-section {
+  background: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.5rem;
+  padding: 0;
+  padding-top: 0;
+}
+
+.about-section h1{
+  margin-top: 0;
+}
+
+.themes-section {
+  background: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.5rem;
+  /* height: 140vh; */
+}
+
+.highlights {
+  /* margin-top: 50px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.highlights h1 {
+  /* padding: 20px; */
+  padding-top: 80px;
+  font-family: Poppins;
+}
+
+.container {
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
 
 .prize {
   display: flex;
@@ -184,7 +200,7 @@ body {
   font-weight: 600;
   width: 350px;
   height: 75px;
-  margin: 20px;
+  /* margin: 20px; */
   margin-bottom: 0;
   border-radius: 2%;
   border: 1px lightgray solid;
@@ -194,10 +210,14 @@ body {
 
 .cards {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   margin-top: 40px;
+  max-width: 100%;
 }
 
 .card {
+  /* min-width: 200px; */
   width: 300px;
   height: 380px;
   margin: 30px;
@@ -229,7 +249,8 @@ body {
 }
 
 .schedule-section {
-  position: relative;
+  /* position: relative; */
+  position: inherit;
   display: flex;
   justify-content: center;
   background-image: url('./assets/bg3.jpg');
@@ -237,7 +258,7 @@ body {
 }
 
 .themes-section {
-  height: 150vh;
+  /* height: 150vh; */
   margin-top: 0;
   margin-bottom: 50px;
   background: white;
@@ -257,12 +278,14 @@ body {
 .theme-cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  /* justify-content: center; */
+  justify-content: space-around;
 }
 
 .theme-card {
-  width: 400px;
-  height: 360px;
+  /* width: 400px; */
+  min-width: 250px;
+  height: 300px;
   margin: 10px;
   display: flex;
   flex-direction: column;
@@ -288,7 +311,11 @@ body {
 }
 
 .event-schedule {
-  margin-top: 50px;
+  /* margin-top: 50px; */
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  flex-direction: column;
 }
 
 .event-schedule h1 {
@@ -296,7 +323,7 @@ body {
 }
 
 .schedule-section-section {
-  position: absolute;
+  /* position: absolute; */
   /* margin-top: 1000p; */
   display: flex;
   bottom: 0;
@@ -535,9 +562,9 @@ body {
 }
 
 footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: flex-end; */
   align-items: center;
   height: 35vh;
   font-size: 1.5rem;
@@ -559,7 +586,7 @@ footer h4 a {
 }
 
 .footer-contact {
-  display: flex;
+  /* display: flex; */
   text-align: center;
 }
 
